# Team15

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  notebook_unit1.ipynb  requirements.txt  test_file
.github/workflows/: main.yml
docs/: circumference.rst  conf.py  help.md  index.rst  installation.md  license.md  readme.md  src.rst
my_package/: my_module.py
my_package/docs/: conf.py  index.rst  modules.rst
my_package/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  my_module.doctree
my_package/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  my_module.html  objects.inv  py-modindex.html  search.html  searchindex.js
my_package/docs/_build/html/_static/: documentation_options.js
src/: __init__.py  area.py  circumference.py  main.py  notebook_unit1.ipynb  setup.cfg
src/docs/: conf.py  index.rst  modules.rst
src/docs/_build/doctrees/: area.doctree  circumference.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree
src/docs/_build/html/: .buildinfo  area.html  circumference.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/_sources/: modules.rst.txt
src/docs/_build/html/_static/: documentation_options.js
src/pytest/: area.py  circumference.py  pytest.ini  test_all.py
