[metadata]
name = team15 - Andreas und Jonas
version = 0.0.1
author = Andreas und Jonas
author_email = 
description = team15 Testpackage
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/JonasProg/Team15.git
project_urls =
    Bug Tracker = https://github.com/JonasProg/Team15/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src